Add support and docs for raw K8s and TPK8s deployments